Revert "Update test to use COH and skip redundant cases."
This reverts commit 2a39f1d37753b1096d6fe1466ea454eb3fc1baca.